--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ h3 {
 
 .smart {
     margin: 0 0 0 15rem;
-  /*  margin: 0 0 0 245px; */
      color: white;
      font-size: 60px;
      font-family: Cambo;
@@ -51,7 +50,6 @@ h3 {
  
 .inspiring {
     margin: 0 0 0 15rem;
-/*    margin: 0 0 0 248px; */
     font-size: 15px;
     color: #6f6f6f;
     font-family: Open Sans;
@@ -109,11 +107,10 @@ h3 {
     font-size: 60px;
     width:510px; 
     height: 100px;
-    background: rgba(10, 25, 31, 0.9);
+    background: rgba(0, 0, 0, 0.7);
     font-weight: 400;
     top: 230px;
-    margin: 0 0 0 36rem;
-/*    margin: 0 0 0 578px;*/
+    margin: 0 0 0 40%;
     position: relative;
     text-align: center;
     align-items: center;
@@ -127,8 +124,7 @@ h3 {
     width:350px; 
     height: 70px;
     top: 230px;
-    margin: 0 0 0 39rem;
-/*    margin: 0 0 0 620px;*/
+    margin: 0 0 0 42%;
     position: relative;
     text-align: center;
     align-items: center;
@@ -267,7 +263,7 @@ footer {
 
     #top h2 {
         font-size: 60px;
-        width: /* 510px */ 100%;
+        width: 100%;
         height: 100px;
         top: 230px;
         margin: 0;
@@ -275,13 +271,13 @@ footer {
     
     #top h3{
         font-size:40px; 
-        width: /*350px*/ 100%;
+        width: 100%;
         height: 70px;
         top: 230px;
         margin: 0;
     }
     #text-description {
-        width: /* 950px */ 100vw;
+        width: 100vw;
         height: 144px;
         font-size: 20px;
     }
@@ -322,15 +318,15 @@ footer {
  
     #top h2 {
         font-size: 60px;
-        width: /* 510px */ 100%;
+        width: 100%;
         height: auto;
-        top: 230px /*32vh */;
+        top: 230px;
         margin: 0;
     }
     
     #top h3{
         font-size:40px; 
-        width: /*350px*/ 100%;
+        width: 100%;
         height: 70px;
         top: 40vh;
         top: 230px;
@@ -342,7 +338,7 @@ footer {
     }
 
     #text-description {
-        width:  /* 950px */ 100vw;
+        width: 100vw;
         height: 144px;
         font-size: 20px;
     }
